WW-5411 Misc code cleanup