@@ -28,7 +28,11 @@ import org.apache.logging.log4j.Logger;
 import org.apache.struts2.StrutsConstants;
 
 import java.io.Serializable;
-import java.util.*;
+import java.util.Collection;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.ResourceBundle;
 
 /**
  * Provides a default implementation for the most common actions.
@@ -160,7 +164,7 @@ public class ActionSupport implements Action, Validateable, ValidationAware, Tex
         } else {
             final ValueStack valueStack = ActionContext.getContext().getValueStack();
             final Object val = valueStack.findValue(expr);
-            return getText(key, Arrays.asList(val));
+            return getText(key, List.of(val));
         }
     }
 
