@@ -26,7 +26,12 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -158,7 +163,7 @@ public class DefaultFileManager implements FileManager {
     }
 
     public Collection<? extends URL> getAllPhysicalUrls(URL url) throws IOException {
-        return Arrays.asList(url);
+        return List.of(url);
     }
 
 }
